<resources>
    <string name="app_name">Food</string>
    <string name="food">Food</string>
    <string name="record">Record</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="account">帳號</string>
    <string-array name="product_list">
        <item>品名</item>
        <item>飲料</item>
        <item>餅乾</item>
        <item>生食</item>
        <item>熟食</item>
    </string-array>
    <string-array name="area_list">
        <item>地區</item>
        <item>台北市</item>
        <item>新北市</item>
    </string-array>
    <string name="expiry_date">到期日</string>
    <string name="submit">送出</string>
    <string name="pick_up_time">領取時間</string>
    <string name="detail">詳情</string>
    <string name="pw">密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="welcome">歡迎</string>
    <string name="warning">注意事項</string>
    <string name="Cancel">取消</string>
    <string name="checkWarn">我已閱讀注意事項</string>
</resources>
