<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    //注意事項
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/Warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textSize="20sp"/>

    </LinearLayout>
    //------------------------------
    //輸入帳號
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/account"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/mEdtUserid"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:autofillHints="@string/account"
            android:hint="@string/account"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>
    //------------------------
    //輸入密碼
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/pw"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/mEdtUserpw"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:autofillHints="@string/pw"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:gravity="center"/>

    </LinearLayout>
    //-------------------
    //checkbox閱讀注意事項
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="right"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/checkWarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginRight="20dp"
            android:text="@string/checkWarn" />
    </LinearLayout>
    //-----------------------
    //按鈕
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        //取消按鈕
        <Button
            android:id="@+id/mBtnCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="50dp"
            android:text="@string/Cancel" />
        //註冊按鈕
        <Button
            android:id="@+id/mBtnRegiste"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register" />




    </LinearLayout>

</LinearLayout>