<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/account"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/mEdtUserid"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:autofillHints="@string/account"
            android:hint="@string/account"
            android:inputType="number"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/pw"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/mEdtUserpw"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:autofillHints="@string/pw"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal">


        <Button
            android:id="@+id/mBtnRegiste"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/mBtnLogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="login"
            android:text="@string/login" />


    </LinearLayout>


</LinearLayout>