<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0075FF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add"
            android:textSize="24sp" />
    </RelativeLayout>


        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/footer1"
            android:layout_below="@id/header"
            android:background="#FFFFFF">

            <Spinner
                android:id="@+id/spnProduct"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:entries="@array/product_list"
                android:spinnerMode="dropdown"
                android:textAlignment="center">

            </Spinner>

            <Spinner
                android:id="@+id/spnArea"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:entries="@array/area_list"
                android:spinnerMode="dropdown"
                android:textAlignment="center"></Spinner>

            <EditText
                android:id="@+id/Date"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:autofillHints="@string/expiry_date"
                android:gravity="center"
                android:hint="@string/expiry_date"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/Time"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="220dp"
                android:autofillHints="@string/pick_up_time"
                android:gravity="center"
                android:hint="@string/pick_up_time"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/Detail"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="290dp"
                android:autofillHints="@string/detail"
                android:gravity="center"
                android:hint="@string/detail"
                android:inputType="text" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="430dp"
                android:text="@string/submit" />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer1"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#0075FF">

        <Button
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#0075FF"
            android:text="@string/food"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer2"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/footer1"
        android:background="#0075FF">

        <ImageButton
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#0075FF"
            android:contentDescription="@string/food"
            android:src="@drawable/record" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer3"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/footer2"
        android:background="#0075FF">

        <ImageButton
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#0075FF"
            android:contentDescription="@string/food"
            android:src="@drawable/add" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer4"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/footer3"
        android:background="#0075FF">

        <ImageButton
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#0075FF"
            android:contentDescription="@string/food"
            android:src="@drawable/chat" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer5"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/footer4"
        android:background="#0075FF">

        <ImageButton
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#0075FF"
            android:contentDescription="@string/food"
            android:src="@drawable/account" />
    </RelativeLayout>
</RelativeLayout>
